Adicionando o firebase para gerenciar autenticação de usuário na aplicação.

--- a/src/output.css
+++ b/src/output.css
@@ -709,6 +709,11 @@ video {
   text-align: center;
 }
 
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
